[gd_scene load_steps=33 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://spawn_timer.gd" type="Script" id=2]
[ext_resource path="res://HudLayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://cue_emitter.gd" type="Script" id=6]
[ext_resource path="res://TrophyList.tscn" type="PackedScene" id=7]
[ext_resource path="res://default_env.tres" type="Environment" id=8]
[ext_resource path="res://position_sign.tscn" type="PackedScene" id=9]
[ext_resource path="res://dark_green.tres" type="Material" id=10]
[ext_resource path="res://models/blue_transparent.material" type="Material" id=11]
[ext_resource path="res://exit_button.gd" type="Script" id=12]
[ext_resource path="res://Heart_Coin.tscn" type="PackedScene" id=13]
[ext_resource path="res://InfoBox.tscn" type="PackedScene" id=14]
[ext_resource path="res://RunIndicator.tscn" type="PackedScene" id=15]
[ext_resource path="res://boxman_character.tscn" type="PackedScene" id=16]
[ext_resource path="res://PointIndicatorOrigin.tscn" type="PackedScene" id=17]
[ext_resource path="res://floor_sign.tscn" type="PackedScene" id=18]
[ext_resource path="res://ExerciseSelector.tscn" type="PackedScene" id=19]
[ext_resource path="res://GrooveDisplay.tscn" type="PackedScene" id=20]
[ext_resource path="res://blue_outdoor_stage.tscn" type="PackedScene" id=21]
[ext_resource path="res://VRWorkout_mat.tscn" type="PackedScene" id=22]
[ext_resource path="res://assets/vrworkout_logo_cracked_noise.jpg" type="Texture" id=23]
[ext_resource path="res://RetractableMat.tscn" type="PackedScene" id=24]
[ext_resource path="res://CircularGauge.tscn" type="PackedScene" id=25]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 2, 5 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
albedo_color = Color( 1, 1, 1, 0.752941 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 2, 1 )

[sub_resource type="ViewportTexture" id=4]
flags = 12
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_transparent = true
vertex_color_use_as_albedo = true
albedo_texture = SubResource( 4 )

[sub_resource type="Curve3D" id=6]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -0.393426, 1.02695, 0.270852, 0, 0, 0, 0, 0, 0, 1.54268, 1.03279, 2.26938, 0, 0, 0, 0, 0, 0, 1.76955, 0.993884, 6.47424, 0, 0, 0, 0, 0, 0, -0.0516853, 1.12288, 8.81755 ),
"tilts": PoolRealArray( 0, 0, 0, 0 )
}

[sub_resource type="CubeMesh" id=7]

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.455611, 0.0926839, 0.161588 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.94902, 0.937255, 0.937255, 1 )
albedo_texture = ExtResource( 23 )

[node name="Main" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0225873, -0.0546217, 0.0125537 )
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 256 )
transparent_bg = true
handle_input_locally = false
msaa = 6
usage = 1
render_target_v_flip = true
render_target_update_mode = 3
gui_disable_input = true

[node name="InfoLayer" parent="Viewport" instance=ExtResource( 5 )]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1.28434, 0, 0, 0, -0.125141, -0.139777, 0, 0.395165, -0.0442646, 0, 3.02811, -4.00822 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 0.77861, 6.55136e-21, 1.3723e-19, 4.03897e-28, 6.81826, -0.0918891, -2.94945e-20, 0.172952, 3.62266, -0.0650544, 0.244225, -0.37951 )
mesh = SubResource( 3 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="spawn_timer" type="Timer" parent="."]
autostart = true
script = ExtResource( 2 )

[node name="cue_emitter" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8 )
script = ExtResource( 6 )

[node name="PointIndicatorOrigin" parent="cue_emitter" instance=ExtResource( 17 )]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, -0.16725, 2.36562, 3.68116 )

[node name="Position3D" type="Position3D" parent="cue_emitter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51152, 0 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="cue_emitter/Position3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.959816, 0 )
aabb = AABB( -1, -0.256859, -1, 2, 0.513717, 2 )

[node name="Path" type="Path" parent="cue_emitter"]
curve = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="target" type="Spatial" parent="."]
transform = Transform( 0.118828, 0, 0, 0, 1, 0, 0, 0, 0.0898216, -0.87, 1, -0.0667922 )

[node name="target_zone_l" type="MeshInstance" parent="target"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.7525, 0, 0 )
mesh = SubResource( 7 )
material/0 = ExtResource( 11 )

[node name="target_zone_l2" type="MeshInstance" parent="target"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.5653, 0, 0 )
mesh = SubResource( 7 )
material/0 = ExtResource( 11 )

[node name="target_zone_l3" type="MeshInstance" parent="target"]
transform = Transform( 0.866025, 4.20776, 1.65206e-08, -0.00129093, 0.0188166, 0.0898004, 0.661311, -9.63934, 0.0217276, 12.525, -1.07, -11.5 )
visible = false
mesh = SubResource( 7 )
material/0 = ExtResource( 10 )

[node name="target_zone_l4" type="MeshInstance" parent="target"]
transform = Transform( 0.866025, -4.20776, -1.65206e-08, 0.00129093, 0.0188166, 0.0898004, -0.661311, -9.63934, 0.0217276, 2.276, -1.07, -11.5 )
visible = false
mesh = SubResource( 7 )
material/0 = ExtResource( 10 )

[node name="exit_button" type="StaticBody" parent="target"]
transform = Transform( -8.74228e-08, 1, -8.74228e-09, 0, -4.37114e-08, -0.2, -2, -4.37114e-08, 3.82137e-16, -1.57509, 0.750559, -1.12659 )
script = ExtResource( 12 )

[node name="exit_text" parent="target/exit_button" instance=ExtResource( 14 )]
transform = Transform( 1, -1.77636e-15, 1.32349e-23, 0, 1, -8.88178e-16, 1.69407e-21, -1.42109e-14, 1, 0, 0, 0 )
default_text = "EXIT STAGE"

[node name="CollisionShape" type="CollisionShape" parent="target/exit_button"]
transform = Transform( 1, -3.55271e-15, 2.64698e-23, 0, 1, -1.77636e-15, 3.38813e-21, -2.84217e-14, 1, -0.688979, 0, -0.413249 )
shape = SubResource( 8 )

[node name="PositionSign" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.5, 0, 0, 0, -4.37114e-08, -0.5, 0, 1, -2.18557e-08, -1.79988, 0.513339, -4.91669 )
visible = false

[node name="UpdateTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="RunIndicator" parent="." instance=ExtResource( 15 )]
transform = Transform( 0.986972, 0, 0.160897, 0, 1, 0, -0.160897, 0, 0.986972, 0.15379, 2.56887, -10.2223 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 8 )

[node name="boxman" parent="." instance=ExtResource( 16 )]
transform = Transform( 0.54534, 0, 0.715964, 0, 0.9, 0, -0.715964, 0, 0.54534, -2.14794, 0.0354877, -8.39827 )

[node name="boxman2" parent="." instance=ExtResource( 16 )]
transform = Transform( 0.763243, 0, -0.476927, 0, 0.9, 0, 0.476927, 0, 0.763243, 2.21215, 0.0354877, -9.01605 )

[node name="FloorSign" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0908899, -0.0706311 )

[node name="ExerciseSelector" parent="." instance=ExtResource( 19 )]
transform = Transform( -6.55671e-09, -0.15, 6.55671e-09, 0, -6.55671e-09, -0.15, 0.15, -6.55671e-09, 2.86603e-16, 1.11235, 0.55107, -0.350501 )

[node name="GrooveDisplay" parent="." instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2.36304, -4.23735 )

[node name="MainStage" type="Spatial" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -0.252361, 0, -4.95283 )

[node name="blue_outdoor_stage" parent="MainStage" instance=ExtResource( 21 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.026268, -0.001, -0.586 )

[node name="mat_simple" parent="MainStage" instance=ExtResource( 22 )]
transform = Transform( -6.99382e-10, 0, 0.018, 0, 0.02, 0, -0.016, 0, -7.86805e-10, 0.109178, -0.01, 0.493 )
visible = false
material/0 = SubResource( 9 )

[node name="mat" parent="MainStage" instance=ExtResource( 24 )]
transform = Transform( 0.19, 0, 0, 0, 0.2, 0, 0, 0, 0.19, 0.0230895, 0.00996999, 0.522808 )

[node name="TrophyList" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.161756, 0, -0.117622, 0, 0.2, 0, 0.117622, 0, 0.161756, -1.96862, 2.03119, -1.42694 )

[node name="heart_coin" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -1.91774, 3.01999, -3.98032 )
visible = false
bpm = 60.0

[node name="rungauge" parent="." instance=ExtResource( 25 )]
transform = Transform( 1.5, 0, 0, 0, -4.37114e-08, -1.5, 0, 1, -6.55671e-08, 0, 1.27897, -4.07523 )
visible = false
[connection signal="timeout" from="spawn_timer" to="spawn_timer" method="_on_spawn_timer_timeout"]
[connection signal="camera_entered" from="cue_emitter/Position3D/VisibilityNotifier" to="cue_emitter" method="_on_VisibilityNotifier_camera_entered"]
[connection signal="camera_exited" from="cue_emitter/Position3D/VisibilityNotifier" to="cue_emitter" method="_on_VisibilityNotifier_camera_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="touched" from="target/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="state_change_completed" from="PositionSign" to="." method="_on_PositionSign_state_change_completed"]
[connection signal="timeout" from="UpdateTimer" to="." method="_on_UpdateTimer_timeout"]
[connection signal="beast_attack_successful" from="boxman" to="." method="_on_boxman_beast_attack_successful"]
[connection signal="beast_killed" from="boxman" to="." method="_on_boxman_beast_killed"]
[connection signal="beast_attack_successful" from="boxman2" to="." method="_on_boxman_beast_attack_successful"]
[connection signal="beast_killed" from="boxman2" to="." method="_on_boxman_beast_killed"]
[connection signal="selected" from="ExerciseSelector" to="." method="_on_ExerciseSelector_selected"]
